<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ControlScreen">

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joyStickView"
        android:layout_width="378dp"
        android:layout_height="274dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="56dp"
        app:JV_autoReCenterButton="true"
        app:JV_backgroundColor="@color/silver"
        app:JV_borderColor="@color/silver"
        app:JV_buttonColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/simulator_img"
        android:layout_width="350dp"
        android:layout_height="286dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/joyStickView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginStart="520dp"
        android:layout_marginEnd="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="76dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="310dp"
        android:text="@string/Rudder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="156dp"
        android:layout_height="165dp"
        android:layout_marginBottom="44dp"
        android:rotation="270"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="9dp"
        android:text="@string/Throttle"
        app:layout_constraintBottom_toTopOf="@+id/seekBar2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="86dp"
        android:layout_height="23dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="375dp"
        android:text="@string/Aileron"
        app:layout_constraintBottom_toTopOf="@+id/joyStickView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/simulator_img"
        app:layout_constraintTop_toBottomOf="@+id/simulator_img" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="84dp"
        android:layout_height="101dp"
        android:layout_marginTop="280dp"
        android:rotation="-90"
        android:text="@string/Elevator"
        app:layout_constraintBottom_toTopOf="@+id/joyStickView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/joyStickView"
        app:layout_constraintTop_toBottomOf="@+id/simulator_img" />

</androidx.constraintlayout.widget.ConstraintLayout>
